# finetuner

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  example.py  finetuned.onnx  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py  test.yaml  test_paddle.py
.github/: labeler.yml  pull_request_template.md  requirements-cicd-gpu.txt  requirements-cicd.txt  requirements-test.txt
.github/workflows/: cd.yml  ci.yml  force-docs-build.yml  force-release.yaml  force-release.yml  label-pr.yml  pr.yml  release.yml  remote-ci.yml  tag.yml
cases/fashion_tf/: data_gen.py  pairwise.py  train.py
datasets/: credit.txt  image-image_example.csv  image-text_or_image_example.csv  mesh-mesh_example.csv  text-text_example.csv
docs/: .buildinfo  404.html  CNAME  Makefile  api-rst.rst  conf.py  genindex.html  index.html  index.md  make.bat  makedoc.sh  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  sitemap.xml
docs/1_how_it_works/: 1_1_how_it_works.md  1_2_difference.md  index.md
docs/2_step_by_step/: 2_1_finetune_in_the_cloud.md  2_1_install.md  2_2_experiment_and_run.md  2_3_login_to_jina_ecosystem.md  2_4_create_training_data.md  2_5_choose_back_bone.md  2_5_choose_backbone.md  2_6_start_finetune.md  2_7_get_tuned_model.md  2_8_integrate_with_jina.md  2_8_next_steps.md  2_9_next_steps.md  index.md
docs/3_finetune_in_action/: 3_1_text_to_text.md  3_2_image_to_image.md  3_3_text_to_image_using_clip.md  index.md
docs/3_finetuner_in_action/: 3_1_text_to_text.md  index.md  (+3 more)
example_data/: credit.txt
finetuner/: __init__.py  base.py  callback.py  callbacks.py  console.py  constants.py  data.py  device.py  embedding.py  exception.py  excepts.py  experiment.py  finetuner.py  fit.py  helper.py  hubble.py  model.py  models.py  names.py  run.py  toydata.py  utils.py
old_docs/: Makefile  conf.py  index.md  requirements.txt
scripts/: docstrings_lint.sh  get-all-test-paths.sh  get-versions.sh  release-github.sh  release.sh  update-autocomplete-cli.py
tests/: conftest.py  constants.py  data_generator.py  helper.py  test_data_gen.py  text_sequence.py
trainer/: base.py  dataset.py  keras.py  parser.py  pretrained.py
(+2258 files in other folders)
