[metadata]
name = finetuner
version = attr: finetuner.__version__
url = https://github.com/jina-ai/finetuner/
download_url = https://github.com/jina-ai/finetuner/tags
project_urls = 
    Documentation = https://finetuner.jina.ai
    Source = https://github.com/jina-ai/finetuner/
    Tracker = https://github.com/jina-ai/finetuner/issues
author = Jina AI
author_email = hello@jina.ai
license = Apache 2.0
description = Finetuner allows one to tune the weights of any deep neural network for better embedding on search tasks.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    jina
    neural-search
    neural-network
    deep-learning
    pretraining
    fine-tuning
    pretrained-models
    triplet-loss
    paddlepaddle
    metric-learning
    labeling-tool
    siamese-network
    few-shot-learning
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.7
install_requires =
    jina>=2.6.3
include_package_data = True

[flake8]
# E501 is too long lines - ignore as black takes care of that
# E203 is whitespace before ':' - which occurs in numpy slicing, e.g. in
#     dists[2 * i : 2 * i + 2, :]
# W503 is line break before binary operator - happens when black splits up lines
ignore = E501, E203, W503
exclude = .git,__pycache__,docs/conf.py,old,build,dist,scripts,target
