[metadata]
version = 0.8.1

[flake8]
# E501 is too long lines - ignore as black takes care of that
# E203 is whitespace before ':' - which occurs in numpy slicing, e.g. in
#     dists[2 * i : 2 * i + 2, :]
# W503 is line break before binary operator - happens when black splits up lines
ignore = E203, W503, F405, F403
exclude = .git,__pycache__,docs/conf.py,old,build,dist,scripts,target,setup.py
max-line-length = 88
